--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hola mundo Lindo 
+<html>
+  <h1> Hola mundo Lindo</h1>
+  <div>
+    <img src="matrix-pablo.jpg" height="200"
+         <div/>
+    </html>
+    
